--- a/styles.css
+++ b/styles.css
@@ -482,7 +482,7 @@ tt {
 
 .moreInfo {
   background: #EFEFEF url(aide.gif) no-repeat 10px 12px;
-  margin: 10px;
+  margin: 10px -12px;
   padding: 10px;
   border: 2px solid #2B7FB5;
 /* ajout de Fabien: 20090901 */
